# rime-cli

./: Cargo.toml
.github/workflows/: commit-ci.yml
src/: client.rs  download.rs  get_rime.rs  install.rs  main.rs  package.rs  rime_levers.rs
src/rppi_parser/: Cargo.toml
src/rppi_parser/src/: lib.rs  parser.rs
