[package]
name = "rime-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rime"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.96"
env_logger = "0.11.6"
rime = { package = "librime-sys", git = "https://github.com/lotem/librime-sys.git" }
log = "0.4.26"
structopt = "0.3.26"
claims = "0.8.0"
lazy_static = "1.5.0"
tempfile = "3.17.1"
indicatif = "0.17.11"
regex = "1.11.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
dialoguer = { version = "0.11", optional = true}
rppi_parser = { path = "src/rppi_parser", optional = true }

[features]
tui = ["dialoguer", "rppi_parser"]

[target.'cfg(target_os = "macos")'.dependencies]
git2 = { version = "0.20.0", features = ["vendored-libgit2", "vendored-openssl"] }
[target.'cfg(not(target_os = "macos"))'.dependencies]
git2 = "0.20.0"

[target."cfg(windows)".dependencies]
sevenz-rust2 = "0.12.1"
winreg = "0.55.0"
windows = { version = "0.60.0", features = ["Win32_System", "Win32", "Win32_System_SystemInformation" ] }
windows-version = "0.1.3"
